# djangohuango

./: js.py  pyproject.toml
aboutall_project/: db.sqlite3  manage.py  package.json
aboutall_project/aboutall_project/: asgi.py  settings.py  urls.py  wsgi.py
aboutall_project/main/: views.py
aboutall_project/theme/static/scripts/: script.js
aboutall_project/theme/static_src/: tailwind.config.js
aboutall_project/theme/templates/: base.html  index.html  weather.html
aboutall_project/weather_app/: models.py  views.py
aboutall_project/weather_app/migrations/: 0001_initial.py
